# OBS-Prompter-Studio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE.md  OBS_FORUM_SUBMISSION.md  README.md  build_installer.bat  build_release.bat  buildspec.json  package_zip.bat
cmake/: generate_icon.ps1
data/locale/: en-US.ini
installer/: obs-prompter-studio.iss
src/: plugin-main.cpp  prompter-dock.cpp  prompter-dock.hpp  prompter-hotkeys.cpp  prompter-hotkeys.hpp  prompter-source.cpp  prompter-source.hpp  prompter-state.cpp  prompter-state.hpp  prompter-xbox.cpp  prompter-xbox.hpp
